# arcam_fmj

./: .gitignore  .travis.yml  CLAUDE.md  README.rst  flake.nix  pylintrc  pyproject.toml  setup.cfg  setup.py  test_xml.py
.github/workflows/: python-package.yml  python-publish.yml
docs/: Firmware Dump.md
docs/specs/: README.md  RS232_5_10_20_30_40_11_21_31_41__SH289E_F_07Oct21.md  RS232_860_850_550_390_250_SH274E_D_181018.md  RS232_AVR750450380_SH256E_3.md  RS232_PA720_PA240_PA410_SH305E_3.md  SH277E_RS232_SA10_SA20_B.md  SH306E_RS232_SA30_4.md  SH309_RS232_ST60_C.md  SH320E_RS232_SA750_iss1.md
src/arcam/fmj/: __init__.py  _codecs.py  _commands.py  _errors.py  _packets.py  _rc5.py  client.py  codecs.py  commands.py  console.py  errors.py  models.py  packets.py  priority_lock.py  rc5.py  schemas.py  server.py  state.py  state.pyi  utils.py
src/arcam_av/: __init__.py  client.py  console.py  server.py  state.py  utils.py
tests/: __init__.py  test_codecs.py  test_fake.py  test_priority_lock.py  test_schemas.py  test_source.py  test_standard.py  test_state.py  test_utils.py
