[project]
name = "arcam-fmj"
version = "1.8.2"
description = "A python library for speaking to Arcam receivers"
readme = "README.rst"
authors = [
    {name = "Joakim Plate"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Plugins",
    "Framework :: AsyncIO",
]
requires-python = ">=3.11"
dependencies = [
    "attrs>18.1",
]
license = "MIT"

[project.urls]
Homepage = "https://github.com/elupus/arcam_fmj"

[project.optional-dependencies]
tests = [
    "aiohttp",
    "coveralls",
    "defusedxml",
    "pytest-aiohttp>=1.0.0",
    "pytest-asyncio==0.21.2",
    "pytest-cov>=3.0.0",
    "pytest-mock",
    "pytest>3.6.4",
]

[project.scripts]
arcam-fmj = "arcam.fmj.console:main"

[tool.isort]
not_skip = "__init__.py"
multi_line_output = 3

[tool.pytest.ini_options]
asyncio_mode = "auto"
